--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,16 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <header class='page-header'>
+    <h4>The Mood Shop</h4>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Cart</a></li>
+      </ul>
+    </nav>
+  </header>
     <script src="script.js"></script>
   </body>
 </html>
